Fixed +1 shift in the month days

--- a/css/ask.scss
+++ b/css/ask.scss
@@ -138,7 +138,7 @@ $pep-pic-width: 50px;
 
 .ti-people-name {
 	width: 115px;
-    font-size: 1.25em;
+    font-size: 1.20em;
 }
 .ti-people-name p {
 	padding: 5px;
